--- a/style.css
+++ b/style.css
@@ -12,9 +12,22 @@
     --dim: #555;
 }
 
-* { 
+* {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none;    /* Firefox */
+    -ms-user-select: none;     /* IE/Edge */
+    user-select: none;         /* Standard */
     box-sizing: border-box; 
 }
+
+/* Permetti selezione solo negli input */
+input, textarea, [contenteditable="true"] {
+    -webkit-user-select: text !important;
+    -moz-user-select: text !important;
+    -ms-user-select: text !important;
+    user-select: text !important;
+}
+
 
 body { 
     background: var(--bg); 
